2013-04-04  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - Changed __linux__ to PROCENV_LINUX.
	  - header(): Fix possible buffer overflow.
	  - dump_meta(): Added a "mode" value showing if running
	    privileged or non-privileged (the former showing potentially
	    more information).
	  - show_tty_attrs():
	    - Now shows individual locked tty attributes
	      when running in privileged mode.
	    - Added winsize attributes.
	  - get_tty_locked_status(): New function.
	* man/procenv.1: Update for --tty.

2013-03-27  James Hunt  <james.hunt@ubuntu.com>

	* Merge of lp:~mtmiller/procenv/portability-bug-fixes.

2013-01-10  James Hunt  <james.hunt@ubuntu.com>

	* TODO: Updated.
	* src/procenv.c:
	  - locale_map: Protect LC_NAME for FreeBSD.
	  - show_env() and show_all_groups(): sort environment
	    using strcoll(3) rather than strcmp(3) to make output
	    locale-aware.

2012-12-15  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: get_priorities(): Do not assert priorities
	  since they may be legitimate values. We could check errno,
	  but little point when only querying.

2012-12-10  James Hunt  <james.hunt@ubuntu.com>

	* TODO: Updated with an idea from Dmitrijs Ledkovs.

2012-12-06  James Hunt  <james.hunt@ubuntu.com>

	* TODO: Updated with a couple of ideas.
	* man/procenv.1: Formatting of "SEE ALSO" section.
	* src/procenv.c: show_linux_prctl(): Handle all possible
	  return scenarios to avoid random output.
	  Thanks Dave Love (LP: #1086771).

	[ Dave Love <fx@gnu.org> ]
	* src/procenv.c:
	  - locale_map:
	    - Guard non-POSIX locale categories for portability.
	    - Remove LC_ALL.
	  - show_locale(): Special-case handling for LC_ALL.

	[ Mike Miller <mtmiller@ieee.org> ]
	* src/procenv.c:
	  - show_linux_security_module_context(): Check that Apparmor
	    and SELinux are enabled before querying contexts
	    (LP: #1086768).

2012-12-02  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: